fix: update color variables in globals.css for improved contrast and accessibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,10 +8,12 @@ body {
 
 
 
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 0.0 0.0% 18.0%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
@@ -33,27 +35,28 @@ body {
   }
  
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: 0.0 0.0% 7.8%;
     --foreground: 0 0% 95%;
-    --card: 24 9.8% 10%;
+    --card: 0.0 0.0% 12.9%;
     --card-foreground: 0 0% 95%;
-    --popover: 0 0% 9%;
+    --popover: 0.0 0.0% 12.9%;
     --popover-foreground: 0 0% 95%;
     --primary: 146.2 40.9% 54.9%;
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 15%;
+    --muted: 0.0 0.0% 18.0%;
     --muted-foreground: 240 5% 64.9%;
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
+    --border: 0.0 0.0% 30.2%;
+    --input: 0.0 0.0% 32.2%;
     --ring: 146.2 40.9% 54.9%;
   }
 }
+
 
 @layer base {
   * {
